Add explanation of problem 6 to book

--- a/book.toml
+++ b/book.toml
@@ -3,3 +3,6 @@ authors = ["Piotr Strąk"]
 language = "en"
 src = "src"
 title = "A Guide to Project Euler in Scala"
+
+[output.html]
+mathjax-support = true
